<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MercurOplay</string>

    <string name="nav_live">Direct</string>
    <string name="nav_podcast">En Podcast</string>
    <string name="nav_channels">Les Émissions</string>
    <string name="nav_contact">Nous Contacter</string>

    <string name="live_on_air">EN DIRECT</string>
    <string name="live_loading">Connexion au direct…</string>
    <string name="live_listeners_format">%d auditeurs</string>
    <string name="live_listeners_unknown">-- auditeurs</string>
    <string name="live_no_track">Radio Mercure</string>
    <string name="live_play">Lecture</string>
    <string name="live_pause">Pause</string>
    <string name="live_error">Impossible de se connecter au direct. Vérifiez votre connexion.</string>
    <string name="live_retry">Réessayer</string>

    <string name="podcast_title">Derniers Podcasts</string>
    <string name="podcast_loading">Chargement des épisodes…</string>
    <string name="podcast_empty">Aucun épisode disponible pour le moment.</string>
    <string name="podcast_error">Impossible de charger les podcasts.</string>
    <string name="podcast_video_badge">VIDÉO</string>
    <string name="podcast_audio_badge">AUDIO</string>

    <string name="download_started">Téléchargement démarré</string>
    <string name="download_failed">Téléchargement impossible</string>
    <string name="download_permission_needed">Autorisation de stockage requise pour télécharger</string>
    <string name="share_chooser_title">Partager</string>
    <string name="share_text_format">%1$s\n%2$s</string>
    <string name="cd_download">Télécharger</string>
    <string name="cd_share">Partager</string>

    <string name="player_close">Fermer</string>
    <string name="player_play_pause">Lecture / Pause</string>

    <string name="cd_cover_art">Pochette de la station</string>
    <string name="cd_app_logo">Logo MercurOplay</string>
    <string name="cd_episode_thumb">Vignette de l\'épisode</string>

    <string name="about_title">À propos</string>
    <string name="cd_open_about">À propos de l\'application</string>
    <string name="cd_logo_svpro">Logo SVPRO</string>
    <string name="about_version_format">Version %1$s</string>
    <string name="about_terms_title">Conditions d\'utilisation</string>
    <string name="about_terms_url">https://oplay.radiomercure.fr/about/instance/home</string>
    <string name="about_license_title">Licence GNU (GPL v3)</string>
    <string name="about_license_url">https://www.gnu.org/licenses/gpl-3.0.html</string>
    <string name="about_developer_title">Développeur</string>
    <string name="about_developer_name">Samuel Vermeulen</string>
    <string name="about_developer_role">Consultant Informatique &amp; Internet</string>
    <string name="about_link_error">Impossible d\'ouvrir le lien.</string>

    <string name="peertube_channels_title">Toutes les émissions</string>
    <string name="peertube_channels_loading">Chargement des émissions…</string>
    <string name="peertube_channels_empty">Aucune émission trouvée.</string>
    <string name="peertube_channels_error">Impossible de charger les émissions.</string>
    <string name="peertube_videos_loading">Chargement des médias…</string>
    <string name="peertube_videos_empty">Aucune média disponible pour cette émission.</string>
    <string name="peertube_videos_error">Impossible de charger les médias de cette émission.</string>
    <string name="peertube_resolving_download">Préparation du téléchargement…</string>
    <string name="peertube_resolving_playback">Préparation de la lecture…</string>
    <string name="peertube_playback_error">Impossible de lire cette émission.</string>
    <string name="action_back">Retour</string>
    <string name="cd_channel_avatar">Avatar du programme</string>
    <string name="cd_video_thumb">Vignette du programme</string>

    <string name="update_ready_message">Une mise à jour a été téléchargée.</string>
    <string name="update_restart_action">Redémarrer</string>

    <string name="cd_open_contact">Nous contacter</string>
    <string name="contact_title">Nous contacter</string>
    <string name="contact_field_name">Nom ou Association *</string>
    <string name="contact_field_email">Adresse mail *</string>
    <string name="contact_field_phone">Téléphone</string>
    <string name="contact_field_subject">Choisissez une rubrique selon votre demande *</string>
    <string name="contact_label_name">Nom ou Association</string>
    <string name="contact_label_email">Adresse mail</string>
    <string name="contact_label_phone">Téléphone</string>
    <string name="contact_label_subject">Sujet</string>
    <string name="contact_field_message">Message *</string>
    <string name="contact_field_attachment">Joindre un document (ex: affiche annonce locale)</string>
    <string name="contact_field_attachment_hint">Images, PDF, MS Office, LibreOffice, texte brut</string>
    <string name="cd_remove_attachment">Retirer le fichier joint</string>
    <string name="contact_submit">Envoyer</string>
    <string name="contact_error_required">Ce champ est requis</string>
    <string name="contact_error_email_invalid">Adresse mail invalide</string>
    <string name="contact_error_subject_required">Veuillez choisir un sujet</string>
    <string name="contact_send_chooser_title">Envoyer via</string>
    <string name="contact_no_email_app">Aucune application de messagerie disponible sur cet appareil.</string>
    <string name="contact_email_subject_format">[MercurOplay] %1$s</string>
    <string name="contact_signature">\n\n---\nEnvoyé depuis l\'application MercurOplay</string>

    <string-array name="contact_subjects">
        <item>Question générale</item>
        <item>Demande de diffusion d\'une manifestation locale</item>
        <item>Partenariat</item>
        <item>Problème technique / bug</item>
    </string-array>
</resources>
