<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/liveFragment">

    <fragment
        android:id="@+id/liveFragment"
        android:name="fr.svpro.radiomercure.live.LiveFragment"
        android:label="@string/nav_live"
        tools:layout="@layout/fragment_live" />

    <fragment
        android:id="@+id/podcastFragment"
        android:name="fr.svpro.radiomercure.podcast.PodcastFragment"
        android:label="@string/nav_podcast"
        tools:layout="@layout/fragment_podcast" />

    <fragment
        android:id="@+id/peertubeChannelsFragment"
        android:name="fr.svpro.radiomercure.peertube.PeerTubeChannelsFragment"
        android:label="@string/nav_channels"
        tools:layout="@layout/fragment_peertube_list">
        <action
            android:id="@+id/action_channels_to_videos"
            app:destination="@id/peertubeVideosFragment" />
    </fragment>

    <fragment
        android:id="@+id/peertubeVideosFragment"
        android:name="fr.svpro.radiomercure.peertube.PeerTubeVideosFragment"
        android:label="@string/nav_channels"
        tools:layout="@layout/fragment_peertube_list">
        <argument
            android:name="channelName"
            app:argType="string" />
        <argument
            android:name="channelDisplayName"
            app:argType="string" />
    </fragment>

</navigation>
